# HistoryQuiz

./: .gitignore  README.md  parse_questions.py  pyproject.toml  quiz_functions.py  requirements.txt  test.txt  tg_bot.py  vk_bot.py
