[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "quiz-bot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "=11.1.0"
redis = "^3.4"
vk-api = "^11.7"
[tool.poetry.dev-dependencies]
